Fixed search bar spacing and line up

--- a/styles.css
+++ b/styles.css
@@ -98,14 +98,14 @@ button:hover {
 }
 
 .search-bar {
-    grid-template-columns: 1fr 7fr;
+    grid-template-columns: auto 1fr;
     justify-content: start;
     align-items: center;
     gap: 10px;
 }
 
 .search-icon {
-    justify-self: end;
+    padding-left: 15px;
 }
 
 .bar {
@@ -143,7 +143,7 @@ button:hover {
 }
 
 .acc-pic-big {
-    padding-left: 15px;
+    padding-left: 20px;
 }
 
 .acc-pic-big div {
@@ -306,7 +306,7 @@ hr {
 /* Affects Top Right Profile too */
 .acc-pic {
     background-color: rgb(99, 99, 99);
-    height: 54px;
-    width: 54px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
 }
